[gd_scene load_steps=4 format=3 uid="uid://c2l7r3fbjwcif"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_34h0c"]
[ext_resource type="Texture2D" uid="uid://c78ieh1ji5em4" path="res://graphics/splash/intro.png" id="2_buttv"]
[ext_resource type="PackedScene" uid="uid://bt7s1xjkhff68" path="res://scenes/gui/main_menu.tscn" id="3_co6a1"]

[node name="MainMenu" type="Node2D"]
process_mode = 3
script = ExtResource("1_34h0c")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(604, 336)
scale = Vector2(1.18812, 1.17355)
texture = ExtResource("2_buttv")

[node name="MainMenu" parent="." instance=ExtResource("3_co6a1")]

[connection signal="continue_pressed" from="MainMenu" to="." method="_on_main_menu_continue_pressed"]
[connection signal="new_game_pressed" from="MainMenu" to="." method="_on_main_menu_new_game_pressed"]
[connection signal="settings_pressed" from="MainMenu" to="." method="_on_main_menu_settings_pressed"]
